main.css
/* Styles for Product Page Customization */
/* NOTE: Do not edit the Bootstrap CSS files. */

body {
    color: #fde0b5;
    background-image: url('img/blueshade.jpg');
    background-size: 100% 100%;
    background-repeat: no-repeat;
    margin-left:0;
    margin-right: 0;
}

header h1 {
  position: relative;
  text-align: right;
  padding-right:15px;
  border-style: solid;
  border-size:5px;
  font-size: 48px;
  width:100%;
  background:black;
  margin-top: 0px;
  font-family: 'Jura', sans-serif;
  color: #e3e7e9;
}

#social {
  background: transparent;
  position: absolute;
  top:0px;
  left: 15px;
}
#social ul {
  list-style-type: none;
  padding: 0;
}
#social ul li {
  padding:0;
  margin:0;
  display: inline;
}
/*used img opacity to make image become opaque when hovering over*/
#social img {
    opacity: 1.0;
    filter: alpha(opacity=50); /* For IE8 and earlier */
    height: 42px;
    width: 42px;
}

#social img:hover {
    opacity: 0.5;
    filter: alpha(opacity=100); /* For IE8 and earlier */
      -webkit-transform: rotateZ(-30deg);
        -ms-transform: rotateZ(-30deg);
        transform: rotateZ(-30deg);
     transition-duration: 1s;
     border-radius:50%;
}
ul.main-nav {
  list-style-type:none;
  width: 100%;
  background-color:black;
} 

ul.main-nav li {
  display: inline-block;
  width: 32.3%;
  text-align:center;
  font-family: 'Jura', sans-serif;
  font-size: 21px;
  font-weight: bold;
 
}

ul.main-nav a{
 color: #e3e7e9;
}

ul.main-nav li:hover{
  background-color: white;
  transition-duration: .5s;
}

ul.main-nav a:visited {
  color: grey;
}

#signup {
  height: 100px;
  width:140px;
  border-radius: 50%;
  border-style:solid;
  border-size: 10px;
  text-align: center;
  vertical-align: center;
  font-size: 36px;
  padding: 8px 8px 8px 8px;
  background: black;
  font-family: impact,sans-serif;
}

#signup:hover {
    box-shadow: inset 0 0 0 100px #00a1ff;
    -webkit-transition-duration: 1s; /* Safari */
    transition-duration: 1s;
}
#signup a{
 color: #e3e7e9;
}

#signup a:hover{
 opacity: 0.5;
    filter: alpha(opacity=100); /* For IE8 and earlier */   
}

#signup a:visited {
  color: grey;
}


.techtimmy {   
    height:600px;
    width: 100%;
}

#about {
  /*height: 300px;*/
    overflow: hidden;
  /*width: 200px;*/
}
#about img {
    float: left;
    max-width: 300px;
}

#about #intro {
    float: left;
    width: 800px;
    padding: 0 60px;
    font-size: 31px;
    text-align: center;
}

#about .video-wrap {
    float: right;
    text-align: center;
}

#intro {
   font-family: 'Oswald', cursive;
   /*display: inline-block;*/
}

#watch {
  /*position: absolute;*/
  /*top: 200px;*/
  /*right: 000px;*/
  /*text-align: center;*/
}

#features {
  font-family: 'Oswald', sans-serif;
  margin-top: 3%;
}

#features p {
  font-size: 15px;
}

.save-time {
  float: left;
  text-align: center;
  max-width:33.3%;
  height:200px;
  margin-left: 6%;
}

.one-stop {
  float: left;
  text-align: center;
  height: 200px;
  width: 33.3%;
}

.slick-integration {
  float: left;
  text-align: center;
  width: 33.3%;
  height: 200px;
}

#testimonials h2 {
  text-align: center;
  margin-top; 10px;
  font-family: 'jura'; sans-serif;
  font-size: 36px;
}


img.headshot {
  border-radius:40%;
  margin-left: 130px;
  width: 240px;
  height: 220px;
}
ul.quotes {
  list-style-type:none;
  display: inline;
  margin-bottom: 40px;
}
ul.quotes p{
  font-size: 15px;
  height:50px;
  width: 33%;
  margin-left: 275px;
}

ul.quotes li {
  margin-left: -50px;
  display: inline-block;
  width: 33%;
  min-width: 100px;
  text-align: center;
}
#contact {
  text-align:center;
  margin-top: 35px;
  font-family: 'Oswald', sans-serif;
}

